<resources>
    <string name="app_name">HandiPressante</string>
    <string name="app_name_uppercase">HANDIPRESSANTE</string>

    <string name="about_version_label">Version :</string>
    <string name="about_version">1.0.4</string>

    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>

    <string name="menu_toilets">Toilettes</string>
    <string name="menu_memos">Infos santé</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_about">À propos</string>

    <string name="tab_list_title">À proximité</string>
    <string name="tab_map_title">Carte</string>

    <string name="demo_list">List</string>
    <string name="demo_map">Map</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="toiletlist_no_data">Il n\'y a pas de toilettes référencées à proximité.</string>

    <string name="memolist_no_data">Il n\'y a pas d\'info santé disponible.</string>

    <string name="modification">Modifier fiche</string>
    <string name="save">Enregistrer</string>

    <string name="add_marker">Ajouter</string>

    <string name="dialog_zoom_more">Niveau de zoom insuffisant</string>
    <string name="dialog_zoom_more_instructions">Veuillez augmenter le niveau de zoom afin d\'effectuer un ajout plus précis.</string>
    <string name="dialog_add_toilet">Vous pouvez maintenant ajouter des toilettes.</string>
    <string name="dialog_add_toilet_instructions">Appuyez longtemps à l\'endroit désiré pour démarrer l\'ajout.</string>
    <string name="dialog_add_toilet_confirm">Ajouter des toilettes</string>
    <string name="dialog_add_toilet_confirm_message">Souhaitez-vous ajouter des toilettes à l\'endroit pressé ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>

    <string name="help">Aide</string>

    <string name="thanks_for_contributing">Merci de votre contribution !</string>

    <string name="button_size_value">Cliquer pour accéder aux modifications</string>
    <string name="pmr_value">Cliquer pour filtrer ou non les toilettes accessibles</string>
    <string name="money_value">Cliquer pour filtrer ou non les toilettes payantes</string>

    <string name="dialog_delete_comment">Pourquoi voulez-vous supprimer ce commentaire?</string>
    <string-array name="array_why_delete_comment">
        <item> Ce commentaire est déplacé </item>
        <item> Ce commentaire est obsolète </item>
        <item> Autre</item>
    </string-array>

    <string-array name="array_settings_accessibility_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="array_settings_fee_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="array_settings_size_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="array_settings_size_entries">
        <item> Normal</item>
        <item> Grand</item>
    </string-array>

    <string-array name="array_settings_accessibility">
        <item> Adaptées à la mobilité réduite</item>
        <item> Non adaptées</item>
        <item> Les deux </item>
    </string-array>

    <string-array name="array_settings_charged">
        <item>Gratuites</item>
        <item>Payantes</item>
        <item>Les deux</item>
    </string-array>

    <string-array name="button_map_size_values">
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
    </string-array>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Réglages</item>
        <item>Mémos</item>
    </string-array>

    <string-array name="array_rating_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="go">Y aller !</string>
    <string name="rate_action">Noter</string>
    <string name="comment_action">Commenter</string>
    <string name="more_infos">+ d\'infos</string>
    <string name="edit_sheet">Modifier les infos</string>
    
    <string name="gallery">Galerie</string>

    <string name="preference_file_key">fr.handipressante.app.PREFERENCE_FILE_KEY</string>
    <string name="saved_uuid">uuid</string>
    <string name="title_activity_title">Titre</string>

    <string name="edittoilet_new">Ajout de toilettes</string>
    <string name="edittoilet_edit">Édition de la fiche</string>

    <string name="still_no_comment">Il n\'y a pas encore de commentaires pour ces toilettes !</string>
    <string name="still_no_description">Ces toilettes n\'ont pas de description ! Soyez le premier à la remplir !</string>

    <string name="toiletname_explanation_1">
            Afin de permettre aux autres utilisateurs d\'identifier ces toilettes dans la liste ou sur la carte, il vous faut donner leur donner un nom.
    </string>

    <string name="toiletname_explanation_2">
            Essayez de choisir un nom court et représentatif, par exemple \"Cinéma Gaumont\". Inutile de préciser la ville.
    </string>

    <string name="toiletname_explanation_3">
        Voici quelques idées pour trouver un nom représentatif :\n
        - Nom de l\'enseigne pour les toilettes des commerces.\n
        - Nom de l\'endroit s\'il en a un (\"Parc des Gayeulles\").\n
        - Nom de l\'arrêt de transport en commun à proximité.\n
        - À défaut, le nom de la rue.
    </string>

    <string name="required_field">Le champ est requis.</string>

    <plurals name="maxchars">
        <item quantity="one">%d caractère maximum.</item>
        <item quantity="other">%d caractères maximum.</item>
    </plurals>

    <plurals name="minchars">
        <item quantity="one">%d caractère minimum.</item>
        <item quantity="other">%d caractères minimum.</item>
    </plurals>

    <string name="toiletaccessible_explanation">
        Veuillez indiquer si les toilettes sont accessibles aux personnes à mobilité réduite.
    </string>

    <string name="toiletcharged_explanation">
        Veuillez indiquer si les toilettes sont payantes.
    </string>

    <string name="toiletdescription_explanation">
        Vous pouvez ajouter ici toute information complémentaire à propos de ces toilettes, par exemple :\n
        - État intérieur\n
        - Équipements (lavabo, poubelle, &#8230;)\n
        - Indications pour accéder aux toilettes
    </string>

    <string name="cleanliness">Propreté</string>
    <string name="facilities">Équipement</string>
    <string name="place_accessibility">Accessibilité du lieu</string>
    <string name="description">Description</string>
    <string name="toilet_name">Nom des toilettes</string>

    <string name="toiletrating_explanation">
        Veuillez attribuer une note pour chaque critère.
    </string>

    <string name="more_comments">Autres commentaires</string>

    <string name="comment">Commentaires</string>
    <string name="improve_ergo">Améliorer l\'ergonomie</string>
    <string name="button_size">Taille des boutons</string>
    <string name="contrast">Contraste</string>
    <string name="sliding_or_not">Activer glissement des doigts</string>
    <string name="phone_settings">Paramètres téléphone</string>

    <string name="is_there_logo">Le logo est-il présent?</string>
    <string name="powered_by">Propulsé par :</string>
    <string name="comment_edition">Votre commentaire ici</string>
    <string name="comment_explanation">Veuillez rédiger votre commentaire concernant ces toilettes puis valider en cliquant sur OK.</string>
    <string name="username">Nom d\'utilisateur</string>

    <string name="confirm_send">Confirmation de l\'envoi</string>
    <string name="confirm_photo_add">La photo que vous allez prendre sera publiée sur la fiche d\'information.</string>
    <string name="confirm_report">Signalement de contenu inapproprié</string>
    <string name="confirm_photo_report">Vous trouvez cette photo inconvenante et/ou inutile ?</string>
    <string name="confirm_comment_report">Vous trouvez ce commentaire inconvenant et/ou inutile ?</string>
    <string name="report_success">Votre signalement a bien été pris en compte.</string>
    <string name="gotit">Compris</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Ouvrir le menu latéral</string>
    <string name="navigation_drawer_close">Fermer le menu latéral</string>

    <string name="about_authors_label">Auteurs :</string>
    <string name="about_authors">- Olivier De Jonckère\n- Marc-Antoine Gautier\n- Tom Giraudet\n- Juliette Gonzalez\n- Yvonnig Jan\n- Nicolas Le Borgne</string>
    <string name="about_powered_by">Propulsé par :</string>
    <string name="place_name">Nom du lieu</string>
    <string name="accessibility">Accessibilité</string>
    <string name="edit">Modifier</string>
    <string name="add_picture">Ajouter une photo</string>
    <string name="add">Ajouter</string>

    <string name="eula"><a href="http://www.handipressante.fr/cgu.html">Condition Générales d\'Utilisation</a></string>

</resources>
