<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.handipressante.app.AboutFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:src="@drawable/logodrawer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/logo"
        android:layout_toEndOf="@id/logo"
        android:layout_toRightOf="@id/logo"
        android:text="@string/about_version_label"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/version_label"
        android:layout_toEndOf="@id/version_label"
        android:layout_toRightOf="@id/version_label"
        android:text="@string/about_version" />

    <TextView
        android:id="@+id/authors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/version_label"
        android:layout_toEndOf="@id/logo"
        android:layout_toRightOf="@id/logo"
        android:text="@string/about_authors_label"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authors_label"
        android:layout_toEndOf="@id/logo"
        android:layout_toRightOf="@id/logo"
        android:text="@string/about_authors" />

    <TextView
        android:id="@+id/powered_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/about_powered_by"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/powered_by_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_insa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_insa" />

        <ImageView
            android:id="@+id/logo_rbpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_rbpc"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>


</RelativeLayout>
