<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ToiletEdition.NameActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="#eaeaea">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/edit_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:background="@drawable/background_shadow"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/toilet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="15sp"
                    android:hint="@string/toilet_name"/>

                <TextView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/validate"
                    android:textColor="#ea0000"
                    android:layout_toLeftOf="@+id/validate"
                    android:layout_toStartOf="@+id/validate" />

                <Button
                    android:id="@+id/validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toilet_name"
                    android:layout_alignRight="@+id/toilet_name"
                    android:text="@string/ok"
                    android:enabled="false"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/explanation_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_block"
                android:layout_marginTop="30dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="14sp"
                    android:text="@string/toiletname_explanation_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="14sp"
                    android:text="@string/toiletname_explanation_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="14sp"
                    android:text="@string/toiletname_explanation_3"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
