<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Ergonomie"
        android:key="accessibility">

        <CheckBoxPreference
            android:key="scroll_help"
            android:title="Aide à la navigation"
            android:summary="Ajoute des boutons de navigation"
            android:defaultValue="false"/>

        <Preference
            android:key="font_size"
            android:title="Affichage"
            android:summary="Cliquer pour accéder aux paramètres d'affichage"
            android:defaultValue="false">
        </Preference>/>
        <Preference
            android:key="color"
            android:title="Accessibilité"
            android:summary="Cliquer pour accéder aux paramètres d'accessibilité"
            android:defaultValue="false" />

        <ListPreference
            android:key="button_size"
            android:dialogTitle="Dimension des boutons"
            android:entries="@array/array_settings_size_entries"
            android:entryValues="@array/array_settings_size_values"
            android:title="Taille des boutons"
            android:summary="@string/button_size_value"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Filtres"
        android:key="filters">
        <ListPreference
            android:key="accessibility_filter"
            android:dialogTitle="Choisir la catégorie"
            android:entries="@array/array_settings_accessibility"
            android:entryValues="@array/array_settings_accessibility_values"
            android:title="Choix type de toilettes"
            android:summary="@string/pmr_value"
            android:defaultValue="2" />
        <ListPreference
            android:key="fee_filter"
            android:dialogTitle="Choisir la catégorie"
            android:entries="@array/array_settings_charged"
            android:entryValues="@array/array_settings_fee_values"
            android:title="Toilettes payantes"
            android:summary="@string/money_value"
            android:defaultValue="2" />
    </PreferenceCategory>
</PreferenceScreen>